--- a/catalog.html
+++ b/catalog.html
@@ -9,9 +9,9 @@
 
 <body class="catalog">
     <ul class="menu">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="contacs.html">Контакты</a></li>
+        <li class="menu__list"><a class="menu__link" href="index.html">Главная</a></li>
+        <li class="menu__list"><a class="menu__link" href="catalog.html">Каталог</a></li>
+        <li class="menu__list"><a class="menu__link" href="contacs.html">Контакты</a></li>
     </ul>
     <hr>
     <h2>Каталог</h2>
