--- a/contacs.html
+++ b/contacs.html
@@ -9,9 +9,9 @@
 
 <body class="contacts">
     <ul class="menu">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="contacs.html">Контакты</a></li>
+        <li class="menu__list"><a class="menu__link" href="index.html">Главная</a></li>
+        <li class="menu__list"><a class="menu__link" href="catalog.html">Каталог</a></li>
+        <li class="menu__list"><a class="menu__link" href="contacs.html">Контакты</a></li>
     </ul>
     <hr>
     <h2>Напишите нам</h2>
@@ -19,7 +19,7 @@
         <p>Имя: <input type="text" placeholder="Дмитрий"></p>
         <p>Email: <input type="email" placeholder="mail"></p>
         <p>Ваши пожелания:</p>
-        <textarea cols="30" rows="6"></textarea> <br>
+        <textarea cols="40" rows="6"></textarea> <br>
         <button type="submit">Отправить</button>
         <button type="reset">Удалить данные</button>
     </form>
