1) При наведении на меню сайта цвет ссылок должен меняться на произвольный. 2) На всех страницах создать блок с классом «header», содержащий: 2.1) логотип вашего интернет магазина; 2.2) меню сайта. 3) Создать блок с классом «footer» и разместить в него содержимое футера. 4) При вводе текста в поле «Email» на странице контактной информации поменять цвет текста и цвет поля. 5) При вводе текста в текстовые поля каждое слово должно начинаться с заглавной буквы, даже если пользователь будет вводить со строчной. 6) На странице товара каталога: 6.1) Под заголовком «технические характеристики» разместить таблицу, размером не меньше 2*3 (есть задание *); 6.2) Записать в таблицу произвольные технические характеристики вашего товара; 6.3) Если технических характеристик нет, добавьте таблицу с любыми параметрами по вашему выбору. 7) *При наведении курсора на изображения в разделе просмотра товара и подробного описания необходимо сделать так, чтобы рамка исчезала, но сама картинка при этом не смещалась. 8) *На странице просмотра товара каталога в каждом параграфе выделить первую букву первого слова другим шрифтом и размером. 9) * Создать таблицу размером не менее 4*5. 10) * Объединить несколько ячеек как по горизонтали, так и по вертикали. 11) * Задать высоту для верхней строки таблицы, отличную от всех остальных.
Задачи со * предназначены для продвинутых учеников, которым мало сделать обычное ДЗ.

--- a/catalog.html
+++ b/catalog.html
@@ -8,12 +8,15 @@
 </head>
 
 <body class="catalog">
-    <ul class="menu">
-        <li class="menu__list"><a class="menu__link" href="index.html">Главная</a></li>
-        <li class="menu__list"><a class="menu__link" href="catalog.html">Каталог</a></li>
-        <li class="menu__list"><a class="menu__link" href="contacs.html">Контакты</a></li>
-    </ul>
-    <hr>
+    <header>
+        <a href="index.html"><img class="logo" src="catalog/img/logo_watch_shop.png" alt="Watch Shop"></a>
+        <ul class="menu">
+            <li class="menu__list"><a class="menu__link" href="index.html">Главная</a></li>
+            <li class="menu__list"><a class="menu__link" href="catalog.html">Каталог</a></li>
+            <li class="menu__list"><a class="menu__link" href="contacs.html">Контакты</a></li>
+        </ul>
+        <hr>
+    </header>
     <h2>Каталог</h2>
     <a href="catalog/product_1.html">
         <img src="catalog/img/preview/Oyster_Perpetual_Datejust_min.jpg" alt="Часы Oyster Perpetual Datejust" title="Часы Oyster Perpetual Datejust"><br>
