--- a/contacs.html
+++ b/contacs.html
@@ -8,18 +8,21 @@
 </head>
 
 <body class="contacts">
-    <ul class="menu">
-        <li class="menu__list"><a class="menu__link" href="index.html">Главная</a></li>
-        <li class="menu__list"><a class="menu__link" href="catalog.html">Каталог</a></li>
-        <li class="menu__list"><a class="menu__link" href="contacs.html">Контакты</a></li>
-    </ul>
-    <hr>
+    <header>
+        <a href="index.html"><img class="logo" src="catalog/img/logo_watch_shop.png" alt="Watch Shop"></a>
+        <ul class="menu">
+            <li class="menu__list"><a class="menu__link" href="index.html">Главная</a></li>
+            <li class="menu__list"><a class="menu__link" href="catalog.html">Каталог</a></li>
+            <li class="menu__list"><a class="menu__link" href="contacs.html">Контакты</a></li>
+        </ul>
+        <hr>
+    </header>
     <h2>Напишите нам</h2>
     <form action="">
         <p>Имя: <input type="text" placeholder="Дмитрий"></p>
         <p>Email: <input type="email" placeholder="mail"></p>
         <p>Ваши пожелания:</p>
-        <textarea cols="40" rows="6"></textarea> <br>
+        <textarea cols="40" rows="6" type="text"></textarea> <br>
         <button type="submit">Отправить</button>
         <button type="reset">Удалить данные</button>
     </form>
