--- a/index.html
+++ b/index.html
@@ -8,14 +8,42 @@
 </head>
 
 <body>
-    <ul class="menu">
-        <li class="menu__list"><a class="menu__link" href="index.html">Главная</a></li>
-        <li class="menu__list"><a class="menu__link" href="catalog.html">Каталог</a></li>
-        <li class="menu__list"><a class="menu__link" href="contacs.html">Контакты</a></li>
-    </ul>
-    <hr>
+    <header>
+        <a href="index.html"><img class="logo" src="catalog/img/logo_watch_shop.png" alt="Watch Shop"></a>
+        <ul class="menu">
+            <li class="menu__list"><a class="menu__link" href="index.html">Главная</a></li>
+            <li class="menu__list"><a class="menu__link" href="catalog.html">Каталог</a></li>
+            <li class="menu__list"><a class="menu__link" href="contacs.html">Контакты</a></li>
+        </ul>
+        <hr>
+    </header>
     <h2>Интернет магазин наручных часов</h2>
     <p>Добро пожаловать в&nbsp;Watch Shop&nbsp;&mdash; интернет-магазин дизайнерских часов &#8470;&nbsp;1&nbsp;в России.</p>
+    <table class="bonus_cards">
+        <tr>
+            <td colspan="5">Бонусные карты</td>
+        </tr>
+        <tr>
+            <td>Тип карты</td>
+            <td>Скидка на 1 товар</td>
+            <td>Скидка на 2 товара</td>
+            <td>Скидка на 3 и более товаров</td>
+            <td>Гарантия</td>
+        </tr>
+        <tr>
+            <td>Silver</td>
+            <td>5%</td>
+            <td>10%</td>
+            <td>15%</td>
+            <td rowspan="2">1 год</td>
+        </tr>
+        <tr>
+            <td>Gold</td>
+            <td>10%</td>
+            <td>15%</td>
+            <td>20%</td>
+        </tr>
+    </table>
     <footer>
         <hr>
         &copy;&nbsp;Все права защищены
