--- a/catalog/product_1.html
+++ b/catalog/product_1.html
@@ -8,12 +8,15 @@
 </head>
 
 <body class="product">
-    <ul class="menu">
-        <li><a href="../index.html">Главная</a></li>
-        <li><a href="../catalog.html">Каталог</a></li>
-        <li><a href="../contacs.html">Контакты</a></li>
-    </ul>
-    <hr>
+    <header>
+        <a href="../index.html"><img class="logo" src="../catalog/img/logo_watch_shop.png" alt="Watch Shop"></a>
+        <ul class="menu">
+            <li class="menu__list"><a class="menu__link" href="../index.html">Главная</a></li>
+            <li class="menu__list"><a class="menu__link" href="../catalog.html">Каталог</a></li>
+            <li class="menu__list"><a class="menu__link" href="../contacs.html">Контакты</a></li>
+        </ul>
+        <hr>
+    </header>
     <h1>Oyster Perpetual Datejust</h1>
     <a href="img/Oyster_Perpetual_Datejust.jpg" target="_blank"><img class="preview" src="img/preview/Oyster_Perpetual_Datejust_min.jpg" alt="Часы Oyster Perpetual Datejust" title="Часы Oyster Perpetual Datejust"></a>
     <h2>Описание товара</h2>
@@ -27,7 +30,18 @@
     <h3>Подробное описание товара</h3>
     <p class="detail">Модель Rolex Datejust&nbsp;&mdash; настоящий эталон классических швейцарских наручных часов, как в&nbsp;отношении дизайна, где нет ни&nbsp;одной лишней детали, так и&nbsp;по&nbsp;своим техническим характеристикам: точности хода и&nbsp;водонепроницаемости. Одно только упоминание названия бренда стразу вызывает ассоциации с&nbsp;роскошью и&nbsp;богатством. В&nbsp;2017 году компания Rolex представила новые версии одной из&nbsp;своих популярнейших коллекций Datejust. Модели изготовлены как в&nbsp;стиле Rolesor, где сочетаются 18&nbsp;каратное белое золото рифлетого безеля со&nbsp;сталью, так и&nbsp;и&nbsp;просто из&nbsp;стали.</p>
     <h3>Дополнительные характеристики</h3>
-    <p>Водонепроницаемость: Да</p>
+    <table class="feature_table">
+    <tr>
+        <td>Водонепроницаемость</td>
+        <td>Ударопрочность</td>
+        <td>Метал</td>
+    </tr>
+    <tr>
+        <td>Да</td>
+        <td>Да</td>
+        <td>Золото</td>
+    </tr>
+</table>
     <footer>
         <hr>
         &copy;&nbsp;Все права защищены
