--- a/catalog/product_2.html
+++ b/catalog/product_2.html
@@ -8,12 +8,15 @@
 </head>
 
 <body class="product">
-    <ul class="menu">
-        <li><a href="../index.html">Главная</a></li>
-        <li><a href="../catalog.html">Каталог</a></li>
-        <li><a href="../contacs.html">Контакты</a></li>
-    </ul>
-    <hr>
+    <header>
+        <a href="../index.html"><img class="logo" src="../catalog/img/logo_watch_shop.png" alt="Watch Shop"></a>
+        <ul class="menu">
+            <li class="menu__list"><a class="menu__link" href="../index.html">Главная</a></li>
+            <li class="menu__list"><a class="menu__link" href="../catalog.html">Каталог</a></li>
+            <li class="menu__list"><a class="menu__link" href="../contacs.html">Контакты</a></li>
+        </ul>
+        <hr>
+    </header>
     <h1>Speedmaster Professional Chronograph</h1>
     <a href="img/Speedmaster_Professional_Chronograph.jpg" target="_blank"><img class="preview" src="img/preview/Speedmaster_Professional_Chronograph_min.jpg" alt="Часы Speedmaster Professional Chronograph" title="Часы Speedmaster Professional Chronograph"></a>
     <h2>Описание товара</h2>
@@ -27,7 +30,17 @@
     <h3>Подробное описание товара</h3>
     <p class="detail">OMEGA Speedmaster&nbsp;&mdash; одни из&nbsp;самых культовых часов OMEGA. Побывав во&nbsp;всех шести лунных экспедициях, легендарные часы Speedmaster стали символом, выражающим первопроходческий дух марки OMEGA. Основу этого хронографа составляет высокоточный механический калибр с&nbsp;ручным заводом. В&nbsp;специальный подарочный футляр, в&nbsp;котором продаются эти часы, также входят ремешок NATO, ремешок для астронавтов, инструмент для замены браслета и&nbsp;книга о&nbsp;важных событиях в&nbsp;истории часов Speedmaster.</p>
     <h3>Дополнительные характеристики</h3>
-    <p>Специальный подарочный футляр</p>
+    <table class="feature_table">
+    <tr>
+        <td>Водонепроницаемость</td>
+        <td>Ударопрочность</td>
+        <td>Метал</td>
+    </tr>
+    <tr>
+        <td>Да</td>
+        <td>Да</td>
+        <td>Серебро</td>
+    </tr>
     <footer>
         <hr>
         &copy;&nbsp;Все права защищены
