устранение лишних тегов

--- a/catalog/product_2.html
+++ b/catalog/product_2.html
@@ -31,23 +31,21 @@
     <p class="detail">OMEGA Speedmaster&nbsp;&mdash; одни из&nbsp;самых культовых часов OMEGA. Побывав во&nbsp;всех шести лунных экспедициях, легендарные часы Speedmaster стали символом, выражающим первопроходческий дух марки OMEGA. Основу этого хронографа составляет высокоточный механический калибр с&nbsp;ручным заводом. В&nbsp;специальный подарочный футляр, в&nbsp;котором продаются эти часы, также входят ремешок NATO, ремешок для астронавтов, инструмент для замены браслета и&nbsp;книга о&nbsp;важных событиях в&nbsp;истории часов Speedmaster.</p>
     <h3>Дополнительные характеристики</h3>
     <table class="feature_table">
-    <tr>
-        <td>Водонепроницаемость</td>
-        <td>Ударопрочность</td>
-        <td>Метал</td>
-    </tr>
-    <tr>
-        <td>Да</td>
-        <td>Да</td>
-        <td>Серебро</td>
-    </tr>
+        <tr>
+            <td>Водонепроницаемость</td>
+            <td>Ударопрочность</td>
+            <td>Метал</td>
+        </tr>
+        <tr>
+            <td>Да</td>
+            <td>Да</td>
+            <td>Серебро</td>
+        </tr>
+    </table>
     <footer>
         <hr>
         &copy;&nbsp;Все права защищены
     </footer>
 </body>
-
-</html>
-
 
 </html>
