--- a/catalog.html
+++ b/catalog.html
@@ -7,29 +7,73 @@
     <title>Каталог</title>
 </head>
 
-<body class="catalog">
-    <header>
-        <a href="index.html"><img class="logo" src="catalog/img/logo_watch_shop.png" alt="Watch Shop"></a>
-        <ul class="menu">
-            <li class="menu__list"><a class="menu__link" href="index.html">Главная</a></li>
-            <li class="menu__list"><a class="menu__link" href="catalog.html">Каталог</a></li>
-            <li class="menu__list"><a class="menu__link" href="contacs.html">Контакты</a></li>
-        </ul>
-        <hr>
-    </header>
-    <h2>Каталог</h2>
-    <a href="catalog/product_1.html">
-        <img src="catalog/img/preview/Oyster_Perpetual_Datejust_min.jpg" alt="Часы Oyster Perpetual Datejust" title="Часы Oyster Perpetual Datejust"><br>
-        <p>Oyster Perpetual Datejust</p>
-    </a>
-    <a href="catalog/product_2.html">
-        <img src="catalog/img/preview/Speedmaster_Professional_Chronograph_min.jpg" alt="Часы Speedmaster Professional Chronograph 42 мм" title="Часы Speedmaster Professional Chronograph 42 мм">
-        <p>Speedmaster Professional Chronograph</p>
-    </a>
-    <footer>
-        <hr>
-        &copy;&nbsp;Все права защищены
-    </footer>
+<body>
+    <div class="container">
+        <div class="header">
+            <div class="logo">
+                <a href="index.html"><img src="catalog/img/logo_watch_shop.png" alt="Watch Shop"></a>
+            </div>
+            <div class="menu">
+                <div class="menu__list"><a class="menu__link" href="index.html">ГЛАВНАЯ</a></div>
+                <div class="menu__list"><a class="menu__link" href="catalog.html">КАТАЛОГ</a></div>
+                <div class="menu__list"><a class="menu__link" href="contacs.html">КОНТАКТЫ</a></div>
+            </div>
+        </div>
+        <h2>Каталог</h2>
+        <div class="catalog">
+            <div class="catalog_produckt">
+                <a href="catalog/product_1.html">
+                    <img src="catalog/img/preview/Oyster_Perpetual_Datejust_min.jpg" alt="Часы Oyster Perpetual Datejust" title="Часы Oyster Perpetual Datejust"><br>
+                    <p>Oyster Perpetual Datejust</p>
+                </a>
+            </div>
+            <div class="catalog_produckt">
+                <a href="catalog/product_2.html">
+                    <img src="catalog/img/preview/Speedmaster_Professional_Chronograph_min.jpg" alt="Часы Speedmaster Professional Chronograph 42 мм" title="Часы Speedmaster Professional Chronograph 42 мм">
+                    <p>Speedmaster Professional Chronograph</p>
+                </a>
+            </div>
+            <div class="catalog_produckt">
+                <a href="catalog/product_1.html">
+                    <img src="catalog/img/preview/Oyster_Perpetual_Datejust_min.jpg" alt="Часы Oyster Perpetual Datejust" title="Часы Oyster Perpetual Datejust"><br>
+                    <p>Oyster Perpetual Datejust</p>
+                </a>
+            </div>
+            <div class="catalog_produckt">
+                <a href="catalog/product_2.html">
+                    <img src="catalog/img/preview/Speedmaster_Professional_Chronograph_min.jpg" alt="Часы Speedmaster Professional Chronograph 42 мм" title="Часы Speedmaster Professional Chronograph 42 мм">
+                    <p>Speedmaster Professional Chronograph</p>
+                </a>
+            </div>
+            <div class="catalog_produckt">
+                <a href="catalog/product_1.html">
+                    <img src="catalog/img/preview/Oyster_Perpetual_Datejust_min.jpg" alt="Часы Oyster Perpetual Datejust" title="Часы Oyster Perpetual Datejust"><br>
+                    <p>Oyster Perpetual Datejust</p>
+                </a>
+            </div>
+            <div class="catalog_produckt">
+                <a href="catalog/product_2.html">
+                    <img src="catalog/img/preview/Speedmaster_Professional_Chronograph_min.jpg" alt="Часы Speedmaster Professional Chronograph 42 мм" title="Часы Speedmaster Professional Chronograph 42 мм">
+                    <p>Speedmaster Professional Chronograph</p>
+                </a>
+            </div>
+            <div class="catalog_produckt">
+                <a href="catalog/product_1.html">
+                    <img src="catalog/img/preview/Oyster_Perpetual_Datejust_min.jpg" alt="Часы Oyster Perpetual Datejust" title="Часы Oyster Perpetual Datejust"><br>
+                    <p>Oyster Perpetual Datejust</p>
+                </a>
+            </div>
+            <div class="catalog_produckt">
+                <a href="catalog/product_2.html">
+                    <img src="catalog/img/preview/Speedmaster_Professional_Chronograph_min.jpg" alt="Часы Speedmaster Professional Chronograph 42 мм" title="Часы Speedmaster Professional Chronograph 42 мм">
+                    <p>Speedmaster Professional Chronograph</p>
+                </a>
+            </div>
+        </div>
+        <div class="footer">
+            &copy;&nbsp;Все права защищены
+        </div>
+    </div>
 
 </body>
 
