--- a/contacs.html
+++ b/contacs.html
@@ -8,37 +8,40 @@
 </head>
 
 <body class="contacts">
-    <header>
-        <a href="index.html"><img class="logo" src="catalog/img/logo_watch_shop.png" alt="Watch Shop"></a>
-        <ul class="menu">
-            <li class="menu__list"><a class="menu__link" href="index.html">Главная</a></li>
-            <li class="menu__list"><a class="menu__link" href="catalog.html">Каталог</a></li>
-            <li class="menu__list"><a class="menu__link" href="contacs.html">Контакты</a></li>
+    <div class="container">
+        <div class="header">
+            <div class="logo">
+                <a href="index.html"><img src="catalog/img/logo_watch_shop.png" alt="Watch Shop"></a>
+            </div>
+            <div class="menu">
+                <div class="menu__list"><a class="menu__link" href="index.html">ГЛАВНАЯ</a></div>
+                <div class="menu__list"><a class="menu__link" href="catalog.html">КАТАЛОГ</a></div>
+                <div class="menu__list"><a class="menu__link" href="contacs.html">КОНТАКТЫ</a></div>
+            </div>
+        </div>
+        <h2>Напишите нам</h2>
+        <form action="">
+            <p>Имя: <input type="text" placeholder="Дмитрий"></p>
+            <p>Email: <input type="email" placeholder="mail"></p>
+            <p>Ваши пожелания:</p>
+            <textarea cols="40" rows="6" type="text"></textarea> <br>
+            <button type="submit">Отправить</button>
+            <button type="reset">Удалить данные</button>
+        </form>
+        <h2>Адрес</h2>
+        <ul>
+            <li>Телефон:880088880</li>
+            <li>Email: email@mail.ru</li>
+            <li>ул. Большой златоуский переулок 7с1</li>
         </ul>
-        <hr>
-    </header>
-    <h2>Напишите нам</h2>
-    <form action="">
-        <p>Имя: <input type="text" placeholder="Дмитрий"></p>
-        <p>Email: <input type="email" placeholder="mail"></p>
-        <p>Ваши пожелания:</p>
-        <textarea cols="40" rows="6" type="text"></textarea> <br>
-        <button type="submit">Отправить</button>
-        <button type="reset">Удалить данные</button>
-    </form>
-    <h2>Адрес</h2>
-    <ul>
-        <li>Телефон:880088880</li>
-        <li>Email: email@mail.ru</li>
-        <li>ул. Большой златоуский переулок 7с1</li>
-    </ul>
-    <h3>Карта</h3>
-    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abdded73f4b43636f30b7475015b26f4f6617ca59e73aee1a8571cd445fbdd201&amp;width=919&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-    <hr>
-    <footer>
-        <hr>
-        &copy;&nbsp;Все права защищены
-    </footer>
+        <h3>Карта</h3>
+        <div class="map">
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abdded73f4b43636f30b7475015b26f4f6617ca59e73aee1a8571cd445fbdd201&amp;width=auto&amp;height=374px&amp;lang=ru_RU&amp;scroll=true"></script>
+        </div>
+        <div class="footer">
+            &copy;&nbsp;Все права защищены
+        </div>
+    </div>
 
 </body>
 
