footer menu modified

--- a/index.html
+++ b/index.html
@@ -225,18 +225,17 @@
                 <div class="fotter-information">
                     <h3 class="fotter-h3">Useful Information</h3>
                     <div class="fotter-information-colum">
-                        <div class="fotter-information-colum-links">
-                            <a class="fotter-information-colum-link" href="#">Sales terms</a>
-                            <a class="fotter-information-colum-link" href="#">Customer care</a>
-                            <a class="fotter-information-colum-link" href="#">Delivery</a>
-                        </div>
-                        <div class="fotter-information-colum-links">
-                            <a class="fotter-information-colum-link" href="#">Architect accounts</a>
-                            <a class="fotter-information-colum-link" href="#">Careers</a>
-                            <a class="fotter-information-colum-link" href="#">Exchanges & returns</a>
-                        </div>
+                        <ul class="fotter-information-colum-links">
+                            <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Sales terms</a></li>
+                            <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Customer care</a></li>
+                            <li><a class="fotter-information-colum-link" href="#">Delivery</a></li>
+                        </ul>
+                        <ul class="fotter-information-colum-links">
+                            <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Architect accounts</a></li>
+                            <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Careers</a></li>
+                            <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Exchanges & returns</a></li>
+                        </ul>
                     </div>
-
                 </div>
                 <div class="footer-subscribe">
                     <h3 class="fotter-h3">Let’s Stay in Touch!</h3>
