--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </a>
                 </div>
                 <div class="feture-product__content">
-                    <div class="feture-product__product  feture-product__product_activ">
+                    <div class="feture-product__product">
                         <img src="img/products/product-1.jpg" alt="product-1">
                         <div class="feture-product__product_hover">
                             <a href="product-details.html" class="feture-product__product__link"><img src="img/arrow.svg" alt="" class="img__center"></a>
